[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "runner"
version = "0.1.0"
[tool.poetry.dependencies]
aiohttp = "^3.6"
fhirpy = "^0.2.1"
pytest-asyncio = "^0.10.0"
pytest-cov = "^4.0.0"
python = "^3.8"
pytz = "^2019.3"
requests = "^2.22"
unittest2 = "^1.1"
yapf = "^0.28.0"
[tool.poetry.dev-dependencies]
